<resources>
    <string name="app_name">Munchking</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password…</string>
    <string name="email">Email…</string>
    <string name="confirm_password">Confirm Password…</string>
    <string name="username">Username…</string>
    <string name="facebook_app_id">1176349819410709</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="create_a_character">Create a Character!</string>
    <string name="profile">Profile</string>
    <string name="character_image">Character Image</string>
    <string name="post">Post</string>
    <string name="character_name">Character Name</string>
    <string name="take_photo">Take Photo</string>
    <string name="view_gallery">View Gallery</string>
    <string name="choose_a_game">Choose a Game…</string>
    <string name="comments">Comments</string>
    <string name="type_your_comment">Type your comment…</string>
    <string name="description">DESCRIPTION</string>
    <string name="traits">TRAITS</string>
    <string name="equipment">GEAR</string>
    <string name="class_and_level">Class and Level</string>
    <string name="race">Race</string>
    <string name="describe_your_character">Describe your Character…</string>
    <string name="edit_traits">Edit traits</string>
    <string name="edit_equipment">Edit equipment</string>
    <string name="add_trait">Add Trait</string>
    <string name="add_equipment">Add Gear</string>
    <string name="name">NAME</string>
    <string name="name_ellipses">Name…</string>
    <string name="description_ellipses">Description…</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="password_mismatch">Passwords do not match!</string>
    <string name="signup_failure">Unable to sign up. Please try again!</string>
    <string name="description_normal">Description</string>
    <string name="name_normal">Name</string>
    <string name="pick_your_favorite_games">Pick Your Favorite Games!</string>
    <string name="cont">Continue</string>
    <string name="skip">Skip</string>
    <string name="favorites">Favorites:</string>
    <string name="google_maps_api_key">AIzaSyB1MIXvO7fiG-lsSZdEjMyuSQfSkSNc2Vo</string>
    <string name="map">Map</string>
    <string name="cancel">Cancel</string>
    <string name="save_favs">Save Favorites</string>
    <string name="selectionbubble">SelectionBubble</string>
    <string name="create">Create</string>
    <string name="view_map">View Map</string>
    <string name="sort_by_date">Recently Made</string>
    <string name="sort_by_distance">People Nearby</string>
    <string name="sign_up_with_facebook">Continue With Facebook</string>
    <string name="score">Average Rating:</string>
    <string name="top_rated">Top Rated</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends: %d</string>
    <string name="remove">Remove</string>
    <string name="accept">Accept</string>
    <string name="request_error">Error sending friend request!</string>
    <string name="incoming_requests">Incoming Requests</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_text">Character successfully deleted</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="too_long">Your username is too long!</string>
    <string name="edit_details">Edit Details</string>
    <string name="save">Save</string>
    <string name="edits_saved">Edits saved!</string>
    <string name="posts_saved">Post saved!</string>
    <string name="pic_not_taken">Picture wasn\'t taken!</string>
</resources>