<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/create_a_character"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person_outline_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>