<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConstraints"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />

        <FrameLayout
            android:id="@+id/flMap"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/swipeContainer"
            app:layout_constraintEnd_toEndOf="@+id/swipeContainer"
            app:layout_constraintStart_toStartOf="@+id/swipeContainer"
            app:layout_constraintTop_toTopOf="@+id/swipeContainer">

        </FrameLayout>

        <ImageView
            android:id="@+id/ivSelect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/selectionbubble"
            android:src="@drawable/selection_bubble"
            app:layout_constraintBottom_toBottomOf="@+id/tvSelDate"
            app:layout_constraintEnd_toEndOf="@+id/tvSelDate"
            app:layout_constraintStart_toStartOf="@+id/tvSelDate"
            app:layout_constraintTop_toTopOf="@+id/tvSelDate" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelDate">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/tvSelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/sort_by_date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSelDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/sort_by_distance"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/tvSelMap"
            app:layout_constraintStart_toEndOf="@+id/tvSelRating"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSelMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/view_map"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSelDist"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/top_rated"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/tvSelDist"
            app:layout_constraintStart_toEndOf="@+id/tvSelDate"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider6"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/swipeContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>